@@ -1,9 +1,4 @@
 DIST django-bootstrap3-4.11.0.tar.gz 32605 SHA256 4cd090df8a8a9f11d598b8579d83be478783cf2c970bf4c8b1c6fcc4d0436b2e SHA512 98e1a81e74dfcf4d9cc28268c6473b660b7cccbee23e00ca4d6adcb4d971236e15e71cb0d7ef3a7c57a800164a43f07d0539ec733b0adb59d70509a21b8f03b9 WHIRLPOOL c61304df37a11011a02f569b11fefcd425cef66bff217895ed3bfae81c732a7ba8fb1781570ae7fab727de130bbcb06aa133e5bb99d806c6e21c03ffd0d7fdac
-DIST django-bootstrap3-4.7.0.tar.gz 30990 SHA256 e8f0924b491cf33f0b5142d7af238da5b4b6ab7b2c28a5e8e0e6e114625e07a2 SHA512 6b4eba20acd745aa8a5155d669aedd0a4316b9bc247f6c7badac7595b5794172e07419dbae59bc6823f4886abbc920cbc4355b8f4e1e1e96df7130ea4ba2454f WHIRLPOOL d99dcd195ff4402c37722b02537ed0b33efb9e2d07e8e0c302d62d9e95741c1f434ad63024c74e36312a8993a67646d0e95ddb8f2e7a2871ed6a0552d5031cdb
-DIST django-bootstrap3-5.0.2.tar.gz 33062 SHA256 caee6a052e44c8fd9bda14b0f5e80310c954d27ff3695d4d8c9af94f25fdc9d3 SHA512 1e1527ba505c89e8694d264286cdbe154764185ce03adfd35b81a8e12ea7113a69863a7d38ac97c93bb3d57a8e32fe6da80ef579f5d0f2a1b77c5169dec73591 WHIRLPOOL 455d47c577b99b2890ebcd3b9ada47dd1c738c73294bcba44248b3d150d6e33d7e522587fdcf68a6aedbeb168d6fb87027f7a2065ae40e374e55982ea09eb635
-DIST django-bootstrap3-5.1.1.tar.gz 33525 SHA256 28eac3126d7d582d574d646e248574792ba0ac2c586a745c674ab29ed27debcb SHA512 54a8ff005a5567ed2206748039fee33f72140b7fe86b95e3de4c15ffc4b30ee63c680fe7734e342f903a81c091d227f65b0ab7478a0df83d1d8b175d97dbb6c3 WHIRLPOOL bdcfce0613741593dff801a9760d0dcfeea7a666b8ef744a86fa327e56a5d371a904590903776ff9e982a9a984a004a39cb750774269199d8b51bb090f792085
-DIST django-bootstrap3-5.2.0.tar.gz 33771 SHA256 0e728c869459d0ed58e6ad7aa667e0e2192f3664c1e017276c5075a32c16f743 SHA512 eb442e8405167aed59ada2a58159a979c70d61fcb123aef4b1a636ac8ef8a8d21d840edd120e896b82db64afc63be05cef514de63111c1672df5bbf7754eb026 WHIRLPOOL 20356c5617318624319054d1aa3970a5ee26a387f084b5c5c700c032f7f6f347d20d0a2baafec2dd2df92a7a5d74594734742c0af35e28df4eafa55f4947f5cf
-DIST django-bootstrap3-5.3.1.tar.gz 33825 SHA256 4a18a9f7e8d5e140e02a29efa9510e52dc53e9f78850047be864e39472969723 SHA512 f7fe56564394408a40df45dbba54e037d0ba0f4afcf299992270fc7a7273599ec0b7eeebbe4350bd4eb7282f346a653696ee0b3a78b3c9a7aacfbe3fd3359928 WHIRLPOOL 71f4177101fbaf9731265599945cf0885d4393e2150f61e1934008736c85cd3f376dd2ca248e9ac096063c82b295f046d5f1bb4e474829572454a16cef7bcc32
 DIST django-bootstrap3-5.4.0.tar.gz 26806 SHA256 a2f579c8ed691e49d7dc3cd32e3065c6462896f286cff5c716457d5c730fdedc SHA512 239c9fcd700f209c1b04ff4a3600af3996cf33460ba60a0f7c997f7e91a16e3b0d49b9a77ae998fbd2d4ee8dc04c5b472f50ed472abe7650d8ed532fad90db0f WHIRLPOOL 0123e96937601e1f7c49dd963af0278f47d7a8df16f586d54ac2a1711cfcaa3b14e9b77df6e83928645762e36286f36a108354229e7b1d6999c050f240cc734f
 DIST django-bootstrap3-6.1.0.tar.gz 27291 SHA256 519948e5172aa1bffd3422e28c8b5362626d9a0b5a61eeaf78dd78d3feaad4a0 SHA512 bab60e7ef9e553519fd02af7411f01a4b858f90c86a0e7a5a59fb45e1eb874b312d81a788989a835a07d2a140b4eb01e44966010518cbde6556a3bbcfa348ed5 WHIRLPOOL 01512531d14d4e7422e282e1cc20e2a4838108e51412f4b7261bc1d01a548a01c5396a73341857f0a2c981eded319524b09ca3687cbb235e119e6d01a29ea2e0
 DIST django-bootstrap3-6.2.2.tar.gz 29626 SHA256 3238a2defabfa115aeea5562cab7279d38c5f656486a27dccdad3c9089914a18 SHA512 bca2e141e752853d64e8d50859df5c01c1b291b2485125ff858c8582b2c1caf8f613692566ffdfc1ea0d40f4a24456f55fda0c06eb0f613b947cba4e7abb1c7e WHIRLPOOL df132b8812339a669d969bf13f00c924f390ac60b733b847f9a3fe8a0775e0cbd4e50b0e2bdb1c4d241b3df522bc438887aa2c42fafe6cecfa3096a69481da3a
