@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/django-bootstrap3
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+  13 Feb 2016; Johann Schmitz <ercpe@gentoo.org>
+  -django-bootstrap3-4.7.0.ebuild, -django-bootstrap3-5.0.2.ebuild,
+  -django-bootstrap3-5.1.1.ebuild, -django-bootstrap3-5.2.0.ebuild,
+  -django-bootstrap3-5.3.1.ebuild:
+  dev-python/django-bootstrap3: Dropped old versions
 
 *django-bootstrap3-6.2.0 (15 Aug 2015)
 
